Use collect() instead of toList()